--- a/collated/main/A0139633B.md
+++ b/collated/main/A0139633B.md
@@ -1,5 +1,5 @@
 # A0139633B
-###### /java/seedu/todolist/commons/events/storage/SaveLocationChangedEvent.java
+###### \java\seedu\todolist\commons\events\storage\SaveLocationChangedEvent.java
 ``` java
 /**
  * Indicates that the location of the save file has been changed
@@ -19,7 +19,7 @@ public class SaveLocationChangedEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/todolist/logic/commands/ChangeStoragePathCommand.java
+###### \java\seedu\todolist\logic\commands\ChangeStoragePathCommand.java
 ``` java
 /*
  * Changes the save location of save file
@@ -51,7 +51,7 @@ public class ChangeStoragePathCommand extends Command {
             //TODO check if the file can be written to the path first (with the storage)
             config.setToDoListFilePath(this.path);
             ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
-            storage.changeToDoListFilePath(this.path);
+            storage.setStoragePath(this.path);
             storage.saveToDoList(model.getToDoList(), this.path);
             model.changeStoragePath(this.path);
             return new CommandResult(String.format(MESSAGE_SUCCESS, this.path));
@@ -72,7 +72,7 @@ public class ChangeStoragePathCommand extends Command {
     }
 }
 ```
-###### /java/seedu/todolist/logic/commands/ExportSaveCommand.java
+###### \java\seedu\todolist\logic\commands\ExportSaveCommand.java
 ``` java
 /*
  * Exports the save file of the location
@@ -120,7 +120,7 @@ public class ExportSaveCommand extends Command {
     }
 }
 ```
-###### /java/seedu/todolist/logic/commands/ListCommand.java
+###### \java\seedu\todolist\logic\commands\ListCommand.java
 ``` java
 /**
  * Lists all tasks in the to-do list to the user.
@@ -195,7 +195,7 @@ public class ListCommand extends Command {
     }
 }
 ```
-###### /java/seedu/todolist/logic/parser/ChangeStoragePathCommandParser.java
+###### \java\seedu\todolist\logic\parser\ChangeStoragePathCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new ChangeStoragePathCommand object
@@ -222,7 +222,7 @@ public class ChangeStoragePathCommandParser {
     }
 }
 ```
-###### /java/seedu/todolist/logic/parser/ExportSaveCommandParser.java
+###### \java\seedu\todolist\logic\parser\ExportSaveCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new ExportSaveCommand object
@@ -249,7 +249,7 @@ public class ExportSaveCommandParser {
     }
 }
 ```
-###### /java/seedu/todolist/logic/parser/ListCommandParser.java
+###### \java\seedu\todolist\logic\parser\ListCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new DeleteCommand object
@@ -272,25 +272,25 @@ public class ListCommandParser {
     }
 }
 ```
-###### /java/seedu/todolist/model/Model.java
+###### \java\seedu\todolist\model\Model.java
 ``` java
     UnmodifiableObservableList<Task> getFilteredIncompleteTaskList();
 
     /** Returns the filtered task list of complete tasks as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
 ```
-###### /java/seedu/todolist/model/Model.java
+###### \java\seedu\todolist\model\Model.java
 ``` java
     UnmodifiableObservableList<Task> getFilteredCompleteTaskList();
 
     /** Returns the filtered task list of overdue tasks as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
 ```
-###### /java/seedu/todolist/model/Model.java
+###### \java\seedu\todolist\model\Model.java
 ``` java
     UnmodifiableObservableList<Task> getFilteredOverdueTaskList();
 
     /** Returns the list of tasks with upcoming deadlines {@code UnmodifiableObservableList<ReadOnlyTask>} */
 ```
-###### /java/seedu/todolist/model/Model.java
+###### \java\seedu\todolist\model\Model.java
 ``` java
     UnmodifiableObservableList<Task> getFilteredUpcomingTaskList();
 
@@ -302,15 +302,17 @@ public class ListCommandParser {
 
     /** Changes the location where the data is being saved*/
 ```
-###### /java/seedu/todolist/model/Model.java
+###### \java\seedu\todolist\model\Model.java
 ``` java
     void changeStoragePath(String newFilePath);
+
+    boolean isUpcomingView();
 
 
 
 }
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     public synchronized void changeStoragePath(String newFilePath) {
         raise(new SaveLocationChangedEvent(newFilePath));
@@ -328,15 +330,19 @@ public class ListCommandParser {
     public void updateTask(int filteredTaskListIndex, Task editedTask)
             throws UniqueTaskList.DuplicateTaskException {
         assert editedTask != null;
-
         int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+
+        if (isViewUpcoming) {
+            int sortedIndex = sortedTasks.getSourceIndex(filteredTaskListIndex);
+            toDoListIndex = filteredTasks.getSourceIndex(sortedIndex);
+        }
         toDoList.updateTask(toDoListIndex, editedTask);
         indicateToDoListChanged(UPDATE, toDoListIndex);
     }
 
     @Override
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredIncompleteTaskList() {
         resetViews();
@@ -350,7 +356,7 @@ public class ListCommandParser {
 
     @Override
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredCompleteTaskList() {
         resetViews();
@@ -364,7 +370,7 @@ public class ListCommandParser {
 
     @Override
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredOverdueTaskList() {
         resetViews();
@@ -378,21 +384,22 @@ public class ListCommandParser {
 
     @Override
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     public UnmodifiableObservableList<Task> getFilteredUpcomingTaskList() {
         resetViews();
         isViewUpcoming = true;
-        //get tasks that are incomplete and are not overdue
+        //get tasks that are not overdue and are incomplete
+        //and arrange them in ascending order by start then end time
         filteredTasks.setPredicate((Predicate<? super Task>) task -> {
-            return isUpcoming(task) && !task.isComplete();
+            return !task.isComplete() && !isOverdue(task);
         });
         indicateViewListChanged(ListCommand.TYPE_UPCOMING);
         return new UnmodifiableObservableList<>(filteredTasks);
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /*
      * Checks if the given task's end date exceeds the current datetime
@@ -400,11 +407,11 @@ public class ListCommandParser {
     public boolean isOverdue(Task task) {
         SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
         Date currentDate = new Date();
-        if (task.getEndTime() != null) {
+        if (hasEndTime(task)) {
             String taskDateString = task.getEndTime().toString();
             try {
                 Date taskDate = dateFormat.parse(taskDateString);
-                return currentDate.compareTo(taskDate) > 0;
+                return !task.isComplete() && currentDate.compareTo(taskDate) > 0;
             } catch (ParseException e) {
                 e.printStackTrace();
                 return false;
@@ -415,17 +422,17 @@ public class ListCommandParser {
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /*
      * Checks that the task is not overdue and not completed
      */
     private boolean isUpcoming(Task task) {
-      //get current time and compare with the task's end time
+        //get current time and compare with the task's end time
         SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
         Date currentDate = new Date();
-        if (hasStartTime(task)) {
-            String taskDateString = task.getStartTime().toString();
+        if (hasEndTime(task)) {
+            String taskDateString = task.getEndTime().toString();
             try {
                 Date taskDate = dateFormat.parse(taskDateString);
                 return currentDate.compareTo(taskDate) <= 0;
@@ -439,13 +446,17 @@ public class ListCommandParser {
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     //Comparator for Date
     Comparator<? super Task> dateComparator = new Comparator<Task>() {
         @Override
         public int compare(Task firstTask, Task secondTask) {
-            if (hasStartTime(firstTask) && hasStartTime(secondTask)) {
+            if (isFloatingTask(firstTask) && !isFloatingTask(secondTask)) {
+                return SWAP; //to place floating tasks at the very back of the list
+            } else if (isDeadlineTask(firstTask) && (!isFloatingTask(secondTask) && !isDeadlineTask(secondTask))) {
+                return SWAP;
+            } else if (hasStartTime(firstTask) && hasStartTime(secondTask)) {
                 SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
                 String firstTaskStartDateString = firstTask.getStartTime().toString();
                 String secondTaskStartDateString = secondTask.getStartTime().toString();
@@ -457,6 +468,18 @@ public class ListCommandParser {
                     e.printStackTrace();
                     return ERROR_VALUE;
                 }
+            } else if (hasEndTime(firstTask) && hasEndTime(secondTask)) {
+                SimpleDateFormat dateFormat = new SimpleDateFormat("dd-MM-yyyy h.mm a");
+                String firstTaskEndDateString = firstTask.getEndTime().toString();
+                String secondTaskEndDateString = secondTask.getEndTime().toString();
+                try {
+                    Date firstTaskEndDate = dateFormat.parse(firstTaskEndDateString);
+                    Date secondTaskEndDate = dateFormat.parse(secondTaskEndDateString);
+                    return firstTaskEndDate.compareTo(secondTaskEndDate);
+                } catch (ParseException e) {
+                    e.printStackTrace();
+                    return ERROR_VALUE;
+                }
             } else {
                 return NO_SWAP;
             }
@@ -464,14 +487,28 @@ public class ListCommandParser {
     };
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
+``` java
+    private boolean isFloatingTask(Task task) {
+        return !hasStartTime(task) && !hasEndTime(task);
+    }
+
+```
+###### \java\seedu\todolist\model\ModelManager.java
+``` java
+    private boolean isDeadlineTask(Task task) {
+        return !hasStartTime(task) && hasEndTime(task);
+    }
+
+```
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     private boolean hasStartTime(Task task) {
         return task.getStartTime() != null;
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     private boolean hasEndTime(Task task) {
         return task.getEndTime() != null;
@@ -485,10 +522,13 @@ public class ListCommandParser {
     }
 
 ```
-###### /java/seedu/todolist/storage/XmlToDoListStorage.java
+###### \java\seedu\todolist\storage\XmlToDoListStorage.java
 ``` java
+    /**
+     * @param String of the newFilePath for the save file. Cannot be null
+     */
     @Override
-    public void changeXmlToDoListStorage(String newFilePath) {
+    public void setStoragePath(String newFilePath) {
         this.filePath = newFilePath;
     }
 
@@ -542,7 +582,7 @@ public class ListCommandParser {
 
 }
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     public void updateSaveLocationInFooter(String newPath) {
         statusBarFooter.setSaveLocation(newPath);
@@ -574,13 +614,50 @@ public class ListCommandParser {
 
 
 ```
-###### /java/seedu/todolist/ui/UiManager.java
+###### \java\seedu\todolist\ui\UiManager.java
 ``` java
     @Subscribe
-    private void handleSaveLocationChangedEvent(ToDoListChangedEvent event) {
+    public void handleSaveLocationChangedEvent(ToDoListChangedEvent event) {
         logger.info(LogsCenter.getEventHandlingLogMessage(event));
         mainWindow.updateSaveLocationInFooter(config.getToDoListFilePath());
     }
 
 }
+```
+###### \resources\view\TaskListCard.fxml
+``` fxml
+                                         <!-- Allow long task titles to be wrapped -->
+                                         <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" >
+                                             <Label fx:id="id" styleClass="cell_big_label">
+                                                <minWidth>
+                                             <!-- Ensures that the label text is never truncated -->
+                                                    <Region fx:constant="USE_PREF_SIZE" />
+                                                </minWidth>
+                                             </Label>
+                                             <Label fx:id="name" text="\$first" styleClass="cell_big_label" prefWidth="400.0" wrapText="true" />
+                                         </HBox>
+                                         <FlowPane fx:id="tags" />
+                                         <Label fx:id="startTime" styleClass="cell_small_label"/>
+                                         <Label fx:id="endTime" styleClass="cell_small_label"/>
+                                      </children>
+                                  </VBox>
+                             </center>
+                             <right>
+                                  <VBox>
+                                      <padding>
+                                          <Insets bottom="5" left="5" right="5" top="26" />
+                                      </padding>
+                                      <children>
+                                          <ImageView  fx:id="statusIcon" fitHeight="27.0"  fitWidth="27.0" preserveRatio="true">
+                                          </ImageView>
+                                      </children>
+                                  </VBox>
+                             </right>
+                        </BorderPane>
+                    </children>
+                </VBox>
+            </children>
+        </GridPane>
+    </children>
+</HBox>
 ```
