--- a/collated/main/A0141647E.md
+++ b/collated/main/A0141647E.md
@@ -1,5 +1,5 @@
 # A0141647E
-###### /java/seedu/todolist/commons/util/SuggestUtil.java
+###### \java\seedu\todolist\commons\util\SuggestUtil.java
 ``` java
 /*
  * Contains method that suggests the most likely correct command
@@ -8,7 +8,7 @@
 public class SuggestUtil {
 
 ```
-###### /java/seedu/todolist/commons/util/SuggestUtil.java
+###### \java\seedu\todolist\commons\util\SuggestUtil.java
 ``` java
     public static String closestCommand(String userCommandType) {
         int distance = 100;
@@ -26,7 +26,7 @@ public class SuggestUtil {
     }
 
 ```
-###### /java/seedu/todolist/commons/util/SuggestUtil.java
+###### \java\seedu\todolist\commons\util\SuggestUtil.java
 ``` java
     public static int levenshteinDistance(String string1, String string2) {
         char[] s1 = string1.toCharArray();
@@ -55,7 +55,182 @@ public class SuggestUtil {
 
 }
 ```
-###### /java/seedu/todolist/logic/commands/CompleteCommand.java
+###### \java\seedu\todolist\integration\GoogleIntegration.java
+``` java
+/*
+ * A class that represents a connection with Google Calendar Service.
+ * The author made some architectural changes and added in 4 methods:
+ * sync, add, taskConverter and addHour.
+ */
+public class GoogleIntegration {
+
+    //Represent the identification of the calendar that the app requests service from
+    public static final String CALENDAR_ID = "primary";
+
+    //Represent an authorized calendar client
+    private final com.google.api.services.calendar.Calendar service;
+
+    //Default constructor
+    public GoogleIntegration() throws IOException, GeneralSecurityException {
+        this.service = GoogleIntegrationUtil.getCalendarService();
+    }
+
+```
+###### \java\seedu\todolist\integration\GoogleIntegration.java
+``` java
+    /*
+     * Import the current Tasks in storage to Google Calendar.
+     * This will delete all available Tasks on Google Calendar first before importing.
+     */
+    public void sync(Model model) throws IOException {
+        Iterator<Task> taskIterator = model.getToDoList().getTaskList().iterator();
+        clearGoogleCalendar();
+        while (taskIterator.hasNext()) {
+            Task taskToSync = taskIterator.next();
+            if (taskToSync.getStartTime() != null || taskToSync.getEndTime() != null) {
+                add(taskToSync);
+            }
+        }
+    }
+
+```
+###### \java\seedu\todolist\integration\GoogleIntegration.java
+``` java
+    /*
+     * Add a Task object to the user Google Calendar account.
+     * It is guaranteed that this Task object is NOT a floating task.
+     */
+    public void add(Task taskToAdd) throws IOException {
+        assert (taskToAdd.getStartTime() != null || taskToAdd.getEndTime() != null);
+
+        System.out.println("Running add to google calendar ...");
+        taskToAdd = GoogleIntegrationUtil.taskNormalizer(taskToAdd);
+        Event taskEvent = GoogleIntegrationUtil.taskConverter(taskToAdd);
+
+        try {
+            Event taskEventAdded = service.events().insert(CALENDAR_ID, taskEvent).execute();
+            System.out.printf("Event added successfully: %s\n", taskEventAdded.getSummary());
+        } catch (IOException ioe) {
+            throw new IOException("Task could not be added to Google Calendar\n"
+                    + ioe.getMessage());
+        }
+    }
+
+```
+###### \java\seedu\todolist\integration\GoogleIntegration.java
+``` java
+    /*
+     * Clears the google calendar
+     */
+    public void clearGoogleCalendar() throws IOException {
+        Events events = service.events().list(GoogleIntegration.CALENDAR_ID).execute();
+        List<Event> items = events.getItems();
+        if (items.size() != 0) {
+            String[] eventIds = new String[items.size()];
+            int i = 0;
+            for (Event event : items) {
+                eventIds[i] = event.getId();
+                i++;
+            }
+            for (int j = 0; j < eventIds.length; j++) {
+                service.events().delete(GoogleIntegration.CALENDAR_ID, eventIds[j]).execute();
+            }
+        }
+    }
+
+}
+```
+###### \java\seedu\todolist\integration\util\GoogleIntegrationUtil.java
+``` java
+    /*
+     * A helper method that pre-process a Task to use Google API
+     */
+    public static Task taskNormalizer(Task task) {
+        assert (task.getStartTime() != null || task.getEndTime() != null);
+
+        Task processedTask;
+
+        if (task.getStartTime() == null) {
+            StartTime defaultStart = new StartTime(addHour(task.getEndTime().getEndTime(),
+                    false));
+            processedTask = TaskParser.parseTask(
+                    task.getName(),
+                    defaultStart,
+                    task.getEndTime(),
+                    task.getTags(),
+                    task.isComplete(),
+                    task.getDescription());
+        } else if (task.getEndTime() == null) {
+            EndTime defaultEnd = new EndTime(addHour(task.getStartTime().getStartTime(),
+                    true));
+            processedTask = TaskParser.parseTask(
+                    task.getName(),
+                    task.getStartTime(),
+                    defaultEnd,
+                    task.getTags(),
+                    task.isComplete(),
+                    task.getDescription());
+        } else {
+            processedTask = TaskParser.parseTask(task);
+        }
+
+        return processedTask;
+    }
+
+```
+###### \java\seedu\todolist\integration\util\GoogleIntegrationUtil.java
+``` java
+    /*
+     * A helper method that converts a Task object into a corresponding Event object
+     * supported by Google Calendar Service.
+     */
+    public static Event taskConverter(Task taskToConvert) {
+        DateTime startDate = new DateTime(
+                (taskToConvert.getStartTime() != null ?
+                        taskToConvert.getStartTime().getStartTime()
+                        : null));
+        DateTime endDate = new DateTime(
+                (taskToConvert.getEndTime() != null ?
+                        taskToConvert.getEndTime().getEndTime()
+                        : null));
+        EventDateTime start = new EventDateTime()
+                .setDateTime(startDate)
+                .setTimeZone("Singapore");
+        EventDateTime end = new EventDateTime()
+                .setDateTime(endDate)
+                .setTimeZone("Singapore");
+        Event.Reminders reminders = new Event.Reminders()
+                .setUseDefault(true);
+        Event taskEvent = new Event()
+                .setSummary(taskToConvert.getName().toString())
+                .setDescription(taskToConvert.getDescription())
+                .setStart(start)
+                .setEnd(end)
+                .setReminders(reminders);
+        return taskEvent;
+    }
+
+```
+###### \java\seedu\todolist\integration\util\GoogleIntegrationUtil.java
+``` java
+    /*
+     * A helper method that creates a new Date object
+     * one hour before the input Date object
+     */
+    public static Date addHour(Date date, boolean up) {
+        Calendar cal = Calendar.getInstance();
+        cal.setTime(date);
+        if (up) {
+            cal.add(Calendar.HOUR_OF_DAY, 1);
+        } else {
+            cal.add(Calendar.HOUR_OF_DAY, -1);
+        }
+
+        return cal.getTime();
+    }
+}
+```
+###### \java\seedu\todolist\logic\commands\CompleteCommand.java
 ``` java
 /**
  * Mark a Task as completed using its last displayed index from the ToDoList
@@ -99,7 +274,7 @@ public class CompleteCommand extends Command {
         } catch (TaskNotFoundException pnfe) {
             assert false : "The target task cannot be missing";
         }
-        commandText = String.format(MESSAGE_COMPLETE_TASK_SUCCESS, taskToComplete);
+        commandText = String.format(MESSAGE_COMPLETE_TASK_SUCCESS, taskToComplete.getName().fullName);
         return new CommandResult(commandText);
     }
 
@@ -114,12 +289,12 @@ public class CompleteCommand extends Command {
     }
 }
 ```
-###### /java/seedu/todolist/logic/commands/DescribeCommand.java
+###### \java\seedu\todolist\logic\commands\DescribeCommand.java
 ``` java
 /*
  * Add/modify the description of a task in the to-do list.
 ```
-###### /java/seedu/todolist/logic/commands/DescribeCommand.java
+###### \java\seedu\todolist\logic\commands\DescribeCommand.java
 ``` java
  */
 public class DescribeCommand extends Command {
@@ -131,7 +306,7 @@ public class DescribeCommand extends Command {
             + "Parameters: INDEX (must be a positive integer) [DESCRIPTION]"
             + "Example: " + COMMAND_WORD + " 1 This is a very important task!";
 
-    public static final String MESSAGE_DESCRIBE_TASK_SUCCESS = "Added description to task: %1$s";
+    public static final String MESSAGE_DESCRIBE_TASK_SUCCESS = "Added description '%1$s' to task: '%2$s'";
     public static final String MESSAGE_NOT_DESCRIBED = "At least one field to edit must be provided.";
 
     private final int filteredTaskListIndex;
@@ -146,8 +321,12 @@ public class DescribeCommand extends Command {
         this.description = description;
     }
 
+    @Override
     public CommandResult execute() throws CommandException {
         List<Task> lastShownList = model.getFilteredTaskList();
+        if (model.isUpcomingView()) {
+            lastShownList = model.getSortedTaskList();
+        }
 
         if (filteredTaskListIndex >= lastShownList.size()) {
             throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
@@ -157,10 +336,14 @@ public class DescribeCommand extends Command {
         Task editedTask = TaskParser.parseTask(taskToDescribe);
         editedTask.setDescription(description);
 
-        model.describeTask(filteredTaskListIndex, editedTask);
-        model.updateFilteredListToShowAll();
 
-        commandResultText = String.format(MESSAGE_DESCRIBE_TASK_SUCCESS, editedTask);
+
+        model.describeTask(filteredTaskListIndex, editedTask);
+        EventsCenter.getInstance().post(new JumpToListRequestEvent(filteredTaskListIndex));
+        EventsCenter.getInstance().post(new TaskPanelSelectionChangedEvent (editedTask));
+        commandResultText = String.format(MESSAGE_DESCRIBE_TASK_SUCCESS,
+                editedTask.getDescription(),
+                editedTask.getName().fullName);
         return new CommandResult(commandResultText);
     }
 
@@ -175,7 +358,73 @@ public class DescribeCommand extends Command {
     }
 }
 ```
-###### /java/seedu/todolist/logic/parser/CompleteCommandParser.java
+###### \java\seedu\todolist\logic\commands\SyncCommand.java
+``` java
+/*
+ * Handles syncing with google calendar.
+ */
+public class SyncCommand extends Command {
+
+    public static final String COMMAND_WORD = "sync";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + "Sync your current to-do list"
+                                             + " to your Google Calendar. This will only sync"
+                                             + " Tasks with either StartTime/EndTime";
+
+    public static final String MESSAGE_SUCCESS = "All Tasks have been successfully synced!";
+
+    public SyncCommand() {
+        ;
+    }
+
+    @Override
+    public CommandResult execute() throws CommandException {
+        try {
+            GoogleIntegration integrator = new GoogleIntegration();
+            integrator.sync(model);
+            return new CommandResult(MESSAGE_SUCCESS);
+        } catch (IOException ioe) {
+            throw new CommandException("Syncing failed. Input error: " + ioe.getMessage());
+        } catch (GeneralSecurityException gse) {
+            throw new CommandException("Syncing failed. Security error: " + gse.getMessage());
+        }
+    }
+
+    @Override
+    public boolean isMutating() {
+        return false;
+    }
+
+    @Override
+    public String getCommandText() {
+        return "";
+    }
+}
+```
+###### \java\seedu\todolist\logic\parser\AddCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new AddCommand object
+ */
+public class AddCommandParser {
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the
+     * AddCommand and returns an AddCommand object for execution.
+     */
+    public Command parse(String args) {
+        try {
+            AddCommand resultCommand = new AddCommand(args);
+            return resultCommand;
+        } catch (IllegalValueException ive) {
+            return new IncorrectCommand(ive.getMessage());
+        } catch (NoSuchElementException nsee) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
+        }
+    }
+}
+```
+###### \java\seedu\todolist\logic\parser\CompleteCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new CompleteCommand object
@@ -203,7 +452,7 @@ public class CompleteCommandParser {
     }
 }
 ```
-###### /java/seedu/todolist/logic/parser/DescribeCommandParser.java
+###### \java\seedu\todolist\logic\parser\DescribeCommandParser.java
 ``` java
 /*
  * Parse input arguments and return a new DescribeCommand object.
@@ -231,7 +480,130 @@ public class DescribeCommandParser {
     }
 }
 ```
-###### /java/seedu/todolist/model/Model.java
+###### \java\seedu\todolist\logic\parser\TaskParser.java
+``` java
+/*
+ * Parse input into a suitable type of Task.
+ */
+public class TaskParser {
+
+    public static final String MESSAGE_INVALID_TASK = "Name must be present";
+
+```
+###### \java\seedu\todolist\logic\parser\TaskParser.java
+``` java
+    /**
+     * Parses the given {@code String} of input that contains parameters
+     * of a Task object and calls the suitable TaskParser based on the parameters.
+     */
+    public static Task parseTask(String taskInput) throws IllegalValueException {
+        ArgumentTokenizer argsTokenizer =
+                new ArgumentTokenizer(PREFIX_START, PREFIX_END, PREFIX_TAG);
+        argsTokenizer.tokenize(taskInput);
+
+        String name;
+        String startTime;
+        String endTime;
+        Set<String> tags;
+
+        try {
+            name = argsTokenizer.getPreamble().get();
+            startTime = (argsTokenizer.getValue(PREFIX_START).isPresent() ?
+                    argsTokenizer.getValue(PREFIX_START).get()
+                    : null);
+            endTime = (argsTokenizer.getValue(PREFIX_END).isPresent() ?
+                    argsTokenizer.getValue(PREFIX_END).get()
+                    : null);
+            tags = ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG));
+        } catch (NoSuchElementException nsse) {
+            throw new NoSuchElementException(MESSAGE_INVALID_TASK);
+        }
+
+        final Set<Tag> tagSet = new HashSet<>();
+        for (String tagName : tags) {
+            tagSet.add(new Tag(tagName));
+        }
+
+        return parseTask(new Name(name),
+                (startTime != null ? new StartTime(startTime) : null),
+                (endTime != null ? new EndTime(endTime) : null),
+                new UniqueTagList(tagSet));
+    }
+
+```
+###### \java\seedu\todolist\logic\parser\TaskParser.java
+``` java
+    /*
+     * An overloaded method that takes in a Name object,
+     * a StartTime object, an EndTime object and a set of Tags
+     * and create a suitable Task object.
+     */
+    public static Task parseTask(Name name, StartTime startTime,
+            EndTime endTime, UniqueTagList uniqueTagList) {
+        assert name != null;
+
+        if (startTime != null && endTime != null) {
+            return new StartEndTask(name, startTime, endTime, uniqueTagList);
+        } else if (startTime != null && endTime == null) {
+            return new StartTask(name, startTime, uniqueTagList);
+        } else if (startTime == null && endTime != null) {
+            return new EndTask(name, endTime, uniqueTagList);
+        } else {
+            return new FloatingTask(name, uniqueTagList);
+        }
+    }
+
+```
+###### \java\seedu\todolist\logic\parser\TaskParser.java
+``` java
+    /*
+     * An overloaded method that takes in a Name object,
+     * a StartTime object, an EndTime object, a set of Tags
+     * and a completion status
+     * and create a suitable Task object.
+     */
+    public static Task parseTask(Name name, StartTime startTime,
+            EndTime endTime, UniqueTagList uniqueTagList,
+            boolean isComplete, String description) {
+        assert name != null;
+
+        Task resultTask;
+
+        if (startTime != null && endTime != null) {
+            resultTask = new StartEndTask(name, startTime, endTime, uniqueTagList, isComplete);
+        } else if (startTime != null && endTime == null) {
+            resultTask = new StartTask(name, startTime, uniqueTagList, isComplete);
+        } else if (startTime == null && endTime != null) {
+            resultTask = new EndTask(name, endTime, uniqueTagList, isComplete);
+        } else {
+            resultTask = new FloatingTask(name, uniqueTagList, isComplete);
+        }
+        resultTask.setDescription(description);
+        return resultTask;
+    }
+
+```
+###### \java\seedu\todolist\logic\parser\TaskParser.java
+``` java
+    /*
+     * Another overloaded method that takes in a Task object
+     * and create a copy of it.
+     */
+    public static Task parseTask(Task taskToCopy) {
+        assert taskToCopy != null;
+
+        Name name = taskToCopy.getName();
+        StartTime startTime = taskToCopy.getStartTime();
+        EndTime endTime = taskToCopy.getEndTime();
+        UniqueTagList uniqueTagList = taskToCopy.getTags();
+        boolean isComplete = taskToCopy.isComplete();
+        String description = taskToCopy.getDescription();
+
+        return parseTask(name, startTime, endTime, uniqueTagList, isComplete, description);
+    }
+}
+```
+###### \java\seedu\todolist\model\Model.java
 ``` java
     void completeTask(int filteredTaskListIndex, Task targetTask)
             throws UniqueTaskList.TaskNotFoundException;
@@ -251,7 +623,7 @@ public class DescribeCommandParser {
      * @throws IndexOutOfBoundsException if {@code filteredTaskListIndex} < 0 or >= the size of the filtered list.
      */
 ```
-###### /java/seedu/todolist/model/Model.java
+###### \java\seedu\todolist\model\Model.java
 ``` java
     void describeTask(int filteredTaskListIndex, Task editedTask);
 
@@ -263,10 +635,14 @@ public class DescribeCommandParser {
 
     /** Returns the filtered task list of incomplete tasks as an {@code UnmodifiableObservableList<ReadOnlyTask>} */
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     public synchronized void completeTask(int filteredTaskListIndex, Task target) throws TaskNotFoundException {
         int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        if (isViewUpcoming) {
+            int sortedIndex = sortedTasks.getSourceIndex(filteredTaskListIndex);
+            toDoListIndex = filteredTasks.getSourceIndex(sortedIndex);
+        }
         toDoList.completeTask(toDoListIndex, target);
         indicateToDoListChanged(COMPLETE);
     }
@@ -274,12 +650,16 @@ public class DescribeCommandParser {
     @Override
     //TODO add error throwing for unwritable save locations
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     public void describeTask(int filteredTaskListIndex, Task editedTask) {
         assert editedTask != null;
 
         int toDoListIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        if (isViewUpcoming) {
+            int sortedIndex = sortedTasks.getSourceIndex(filteredTaskListIndex);
+            toDoListIndex = filteredTasks.getSourceIndex(sortedIndex);
+        }
         toDoList.describeTask(toDoListIndex, editedTask);
         indicateToDoListChanged(DESCRIBE);
     }
@@ -292,7 +672,7 @@ public class DescribeCommandParser {
     }
 
 ```
-###### /java/seedu/todolist/model/task/EndTask.java
+###### \java\seedu\todolist\model\task\EndTask.java
 ``` java
 /*
  * Represent a Task with an EndTime but no specified StartTime
@@ -381,11 +761,11 @@ public class EndTask extends Task {
 
     @Override
     public String getType() {
-        return Task.END_TYPE;
+        return Task.TYPE_END;
     }
 }
 ```
-###### /java/seedu/todolist/model/task/EndTime.java
+###### \java\seedu\todolist\model\task\EndTime.java
 ``` java
 /**
  * Represents a Task's end time in the to-do list.
@@ -411,7 +791,7 @@ public class EndTime implements Comparable<EndTime> {
         this.endTime = endTime;
     }
 
-    protected Date getEndTime() {
+    public Date getEndTime() {
         return this.endTime;
     }
 
@@ -436,7 +816,7 @@ public class EndTime implements Comparable<EndTime> {
     }
 }
 ```
-###### /java/seedu/todolist/model/task/FloatingTask.java
+###### \java\seedu\todolist\model\task\FloatingTask.java
 ``` java
 /*
  * Represent a Task with no specified StartTime and EndTime.
@@ -513,134 +893,11 @@ public class FloatingTask extends Task {
 
     @Override
     public String getType() {
-        return Task.FLOATING_TYPE;
+        return Task.TYPE_FLOATING;
     }
 }
 ```
-###### /java/seedu/todolist/model/task/parser/TaskParser.java
-``` java
-/*
- * Parse input into a suitable type of Task.
- */
-public class TaskParser {
-
-    public static final String MESSAGE_INVALID_TASK = "Name must be present";
-
-```
-###### /java/seedu/todolist/model/task/parser/TaskParser.java
-``` java
-    /**
-     * Parses the given {@code String} of input that contains parameters
-     * of a Task object and calls the suitable TaskParser based on the parameters.
-     */
-    public static Task parseTask(String taskInput) throws IllegalValueException {
-        ArgumentTokenizer argsTokenizer =
-                new ArgumentTokenizer(PREFIX_START, PREFIX_END, PREFIX_TAG);
-        argsTokenizer.tokenize(taskInput);
-
-        String name;
-        String startTime;
-        String endTime;
-        Set<String> tags;
-
-        try {
-            name = argsTokenizer.getPreamble().get();
-            startTime = (argsTokenizer.getValue(PREFIX_START).isPresent() ?
-                    argsTokenizer.getValue(PREFIX_START).get()
-                    : null);
-            endTime = (argsTokenizer.getValue(PREFIX_END).isPresent() ?
-                    argsTokenizer.getValue(PREFIX_END).get()
-                    : null);
-            tags = ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG));
-        } catch (NoSuchElementException nsse) {
-            throw new NoSuchElementException(MESSAGE_INVALID_TASK);
-        }
-
-        final Set<Tag> tagSet = new HashSet<>();
-        for (String tagName : tags) {
-            tagSet.add(new Tag(tagName));
-        }
-
-        return parseTask(new Name(name),
-                (startTime != null ? new StartTime(startTime) : null),
-                (endTime != null ? new EndTime(endTime) : null),
-                new UniqueTagList(tagSet));
-    }
-
-```
-###### /java/seedu/todolist/model/task/parser/TaskParser.java
-``` java
-    /*
-     * An overloaded method that takes in a Name object,
-     * a StartTime object, an EndTime object and a set of Tags
-     * and create a suitable Task object.
-     */
-    public static Task parseTask(Name name, StartTime startTime,
-            EndTime endTime, UniqueTagList uniqueTagList) {
-        assert name != null;
-
-        if (startTime != null && endTime != null) {
-            return new StartEndTask(name, startTime, endTime, uniqueTagList);
-        } else if (startTime != null && endTime == null) {
-            return new StartTask(name, startTime, uniqueTagList);
-        } else if (startTime == null && endTime != null) {
-            return new EndTask(name, endTime, uniqueTagList);
-        } else {
-            return new FloatingTask(name, uniqueTagList);
-        }
-    }
-
-```
-###### /java/seedu/todolist/model/task/parser/TaskParser.java
-``` java
-    /*
-     * An overloaded method that takes in a Name object,
-     * a StartTime object, an EndTime object, a set of Tags
-     * and a completion status
-     * and create a suitable Task object.
-     */
-    public static Task parseTask(Name name, StartTime startTime,
-            EndTime endTime, UniqueTagList uniqueTagList,
-            boolean isComplete, String description) {
-        assert name != null;
-
-        Task resultTask;
-
-        if (startTime != null && endTime != null) {
-            resultTask = new StartEndTask(name, startTime, endTime, uniqueTagList, isComplete);
-        } else if (startTime != null && endTime == null) {
-            resultTask = new StartTask(name, startTime, uniqueTagList, isComplete);
-        } else if (startTime == null && endTime != null) {
-            resultTask = new EndTask(name, endTime, uniqueTagList, isComplete);
-        } else {
-            resultTask = new FloatingTask(name, uniqueTagList, isComplete);
-        }
-        resultTask.setDescription(description);
-        return resultTask;
-    }
-
-```
-###### /java/seedu/todolist/model/task/parser/TaskParser.java
-``` java
-    /*
-     * Another overloaded method that takes in a Task object
-     * and create a copy of it.
-     */
-    public static Task parseTask(Task taskToCopy) {
-        assert taskToCopy != null;
-
-        Name name = taskToCopy.getName();
-        StartTime startTime = taskToCopy.getStartTime();
-        EndTime endTime = taskToCopy.getEndTime();
-        UniqueTagList uniqueTagList = taskToCopy.getTags();
-        boolean isComplete = taskToCopy.isComplete();
-        String description = taskToCopy.getDescription();
-
-        return parseTask(name, startTime, endTime, uniqueTagList, isComplete, description);
-    }
-}
-```
-###### /java/seedu/todolist/model/task/StartEndTask.java
+###### \java\seedu\todolist\model\task\StartEndTask.java
 ``` java
 /*
  * Represent a Task with a StartTime and an EndTime.
@@ -738,11 +995,11 @@ public class StartEndTask extends Task {
 
     @Override
     public String getType() {
-        return Task.START_END_TYPE;
+        return Task.TYPE_START_END;
     }
 }
 ```
-###### /java/seedu/todolist/model/task/StartTask.java
+###### \java\seedu\todolist\model\task\StartTask.java
 ``` java
 /*
  * Represent a Task with only a StartTime but no EndTime specified.
@@ -830,11 +1087,11 @@ public class StartTask extends Task {
 
     @Override
     public String getType() {
-        return Task.START_TYPE;
+        return Task.TYPE_START;
     }
 }
 ```
-###### /java/seedu/todolist/model/task/StartTime.java
+###### \java\seedu\todolist\model\task\StartTime.java
 ``` java
 /**
  * Represents a Task's start time in the to-do list.
@@ -860,7 +1117,7 @@ public class StartTime implements Comparable<StartTime> {
         this.startTime = startTime;
     }
 
-    protected Date getStartTime() {
+    public Date getStartTime() {
         return this.startTime;
     }
 
@@ -885,17 +1142,17 @@ public class StartTime implements Comparable<StartTime> {
     }
 }
 ```
-###### /java/seedu/todolist/model/task/Task.java
+###### \java\seedu\todolist\model\task\Task.java
 ``` java
 /**
  * Represents a Task in the To-do list.
  */
 public abstract class Task {
 
-    public static String END_TYPE = "endTask";
-    public static String START_END_TYPE = "startEndTask";
-    public static String START_TYPE = "startTask";
-    public static String FLOATING_TYPE = "floatingTask";
+    public static final String TYPE_END = "endTask";
+    public static final String TYPE_START_END = "startEndTask";
+    public static final String TYPE_START = "startTask";
+    public static final String TYPE_FLOATING = "floatingTask";
 
     protected Name name;
     protected UniqueTagList tags;
@@ -972,18 +1229,21 @@ public abstract class Task {
     public abstract String getType();
 }
 ```
-###### /java/seedu/todolist/model/task/TimeUtil.java
+###### \java\seedu\todolist\model\task\TimeUtil.java
 ``` java
+/*
+ * Contains methods which help parse string input into Date objects
+ * used mostly in StartTime and EndTime constructor.
  */
 public class TimeUtil {
 
+```
+###### \java\seedu\todolist\model\task\TimeUtil.java
+``` java
     /*
      * Parse a string input and return a Date object that corresponds to
      * the date and time conveyed in the string input.
      * @return null if the given string does not follow allowed format
-```
-###### /java/seedu/todolist/model/task/TimeUtil.java
-``` java
      */
     public static Date parseTime(String time) {
         SimpleDateFormat dateFormatter = new SimpleDateFormat("dd-MM-yyyy h.mm a");
@@ -997,7 +1257,7 @@ public class TimeUtil {
     }
 }
 ```
-###### /java/seedu/todolist/model/task/UniqueTaskList.java
+###### \java\seedu\todolist\model\task\UniqueTaskList.java
 ``` java
     /**
      * Add a description to the task in the list at position {@code index} using {@code editedTask}.
@@ -1009,7 +1269,7 @@ public class TimeUtil {
     }
 
 ```
-###### /java/seedu/todolist/model/task/UniqueTaskList.java
+###### \java\seedu\todolist\model\task\UniqueTaskList.java
 ``` java
     /*
      * Mark the targeted Task as completed.
@@ -1092,7 +1352,7 @@ public class TimeUtil {
 
 }
 ```
-###### /java/seedu/todolist/model/ToDoList.java
+###### \java\seedu\todolist\model\ToDoList.java
 ``` java
     public void describeTask(int index, Task editedTask) {
         assert editedTask != null;
@@ -1104,7 +1364,7 @@ public class TimeUtil {
      * attribute to {@code true}
      */
 ```
-###### /java/seedu/todolist/model/ToDoList.java
+###### \java\seedu\todolist\model\ToDoList.java
 ``` java
     public void completeTask(int index, Task targetTask) throws UniqueTaskList.TaskNotFoundException {
         assert targetTask != null;
