--- a/collated/main/A0144240W.md
+++ b/collated/main/A0144240W.md
@@ -1,5 +1,5 @@
 # A0144240W
-###### /java/seedu/todolist/commons/events/model/ViewListChangedEvent.java
+###### \java\seedu\todolist\commons\events\model\ViewListChangedEvent.java
 ``` java
 public class ViewListChangedEvent extends BaseEvent {
     public final String typeOfListView;
@@ -16,7 +16,7 @@ public class ViewListChangedEvent extends BaseEvent {
 }
 
 ```
-###### /java/seedu/todolist/commons/util/FindUtil.java
+###### \java\seedu\todolist\commons\util\FindUtil.java
 ``` java
     /**
      * Returns true if the task has keywords in its tags or name
@@ -47,7 +47,7 @@ public class ViewListChangedEvent extends BaseEvent {
 
 
 ```
-###### /java/seedu/todolist/commons/util/FindUtil.java
+###### \java\seedu\todolist\commons\util\FindUtil.java
 ``` java
     /**
      * Returns true if the set of tags contain the searchTag
@@ -65,7 +65,7 @@ public class ViewListChangedEvent extends BaseEvent {
 
 
 ```
-###### /java/seedu/todolist/commons/util/FindUtil.java
+###### \java\seedu\todolist\commons\util\FindUtil.java
 ``` java
     /**
      * Returns true if the taskName contains the searchName
@@ -83,7 +83,7 @@ public class ViewListChangedEvent extends BaseEvent {
 }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /** Raises an event to indicate that the filteredList has changed */
     private void indicateViewListChanged(String typeOfList) {
@@ -98,16 +98,18 @@ public class ViewListChangedEvent extends BaseEvent {
 
     @Override
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     @Override
     public UnmodifiableObservableList<Task> getSortedTaskList() {
+        sortedTasks = new SortedList<>(filteredTasks, dateComparator);
         return new UnmodifiableObservableList<>(sortedTasks);
     }
 
+
     @Override
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     @Override
     public void updateFilteredTaskList(Set<String> keywords) {
@@ -125,10 +127,10 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 
-  //=========== Methods to help in filtering task list with given keywords ==============================
+    //=========== Methods to help in filtering task list with given keywords ==============================
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /**
      * Returns a predicate to find keywords when in the incomplete view
@@ -140,7 +142,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /**
      * Returns a predicate to find keywords when in the complete view
@@ -152,7 +154,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /**
      * Returns a predicate to find keywords when in the overdue view
@@ -164,7 +166,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /**
      * Returns a predicate to find keywords when in the upcoming view
@@ -176,7 +178,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /**
      * Returns a predicate to find keywords when in the all view
@@ -189,7 +191,7 @@ public class ViewListChangedEvent extends BaseEvent {
 
 
 ```
-###### /java/seedu/todolist/model/ModelManager.java
+###### \java\seedu\todolist\model\ModelManager.java
 ``` java
     /**
      * Resets the boolean values of the views to false.
@@ -206,7 +208,7 @@ public class ViewListChangedEvent extends BaseEvent {
 
 
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     @FXML
     public void handleAllButton() throws CommandException {
@@ -215,7 +217,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     @FXML
     public void handleCompletedButton() throws CommandException {
@@ -224,7 +226,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     @FXML
     public void handleIncompleteButton() throws CommandException {
@@ -233,7 +235,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     @FXML
     public void handleOverdueButton() throws CommandException {
@@ -242,7 +244,7 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     @FXML
     public void handleUpcomingButton() throws CommandException {
@@ -251,42 +253,103 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     public void changeButtonsBackToOriginalState() {
         incompleteButton.getStyleClass().remove(SELECTED);
-        completedButton.getStyleClass().remove(SELECTED);
+        completeButton.getStyleClass().remove(SELECTED);
         upcomingButton.getStyleClass().remove(SELECTED);
         overdueButton.getStyleClass().remove(SELECTED);
         allButton.getStyleClass().remove(SELECTED);
     }
 
 ```
-###### /java/seedu/todolist/ui/MainWindow.java
+###### \java\seedu\todolist\ui\MainWindow.java
 ``` java
     public void indicateButtonChange(String typeOfButton) {
         changeButtonsBackToOriginalState();
-        if (typeOfButton.equals(ListCommand.TYPE_UPCOMING)) {
-            taskListPanel = new TaskListPanel(getTaskListPlaceholder(), logic.getSortedTaskList());
-            upcomingButton.getStyleClass().add(SELECTED);
-        } else {
-            taskListPanel = new TaskListPanel(getTaskListPlaceholder(), logic.getFilteredTaskList());
-
-            if (typeOfButton.equals(ListCommand.TYPE_INCOMPLETE)) {
-                incompleteButton.getStyleClass().add(SELECTED);
-            } else if (typeOfButton.equals(ListCommand.TYPE_COMPLETE)) {
-                completedButton.getStyleClass().add(SELECTED);
-            } else if (typeOfButton.equals(ListCommand.TYPE_OVERDUE)) {
-                overdueButton.getStyleClass().add(SELECTED);
-            } else {
-                allButton.getStyleClass().add(SELECTED);
-            }
+        taskListPanel.changeList(getTaskListPlaceholder(), logic.getFilteredTaskList());
+        switch(typeOfButton) {
+        case ListCommand.TYPE_UPCOMING:
+            changeUpcomingButton();
+            break;
+        case ListCommand.TYPE_INCOMPLETE:
+            changeIncompleteButton();
+            break;
+        case ListCommand.TYPE_COMPLETE:
+            changeCompleteButton();
+            break;
+        case ListCommand.TYPE_OVERDUE:
+            changeOverdueButton();
+            break;
+        default:
+            changeAllButton();
         }
     }
 
+```
+###### \java\seedu\todolist\ui\MainWindow.java
+``` java
+    /**
+     * Changes the display of the upcoming button to be selected
+     * and adds the sortedList to the task panel
+     */
+    private void changeUpcomingButton() {
+        taskListPanel.changeList(getTaskListPlaceholder(), logic.getSortedTaskList());
+        upcomingButton.getStyleClass().add(SELECTED);
+    }
+
+```
+###### \java\seedu\todolist\ui\MainWindow.java
+``` java
+    /**
+     * Changes the display of the incomplete button to be selected
+     */
+    private void changeIncompleteButton() {
+        incompleteButton.getStyleClass().add(SELECTED);
+    }
+
+```
+###### \java\seedu\todolist\ui\MainWindow.java
+``` java
+    /**
+     * Changes the display of the complete button to be selected
+     */
+    private void changeCompleteButton() {
+        completeButton.getStyleClass().add(SELECTED);
+    }
+
+```
+###### \java\seedu\todolist\ui\MainWindow.java
+``` java
+    /**
+     * Changes the display of the overdue button to be selected
+     */
+    private void changeOverdueButton() {
+        overdueButton.getStyleClass().add(SELECTED);
+    }
+
+```
+###### \java\seedu\todolist\ui\MainWindow.java
+``` java
+    /**
+     * Changes the display of the all button to be selected
+     */
+    private void changeAllButton() {
+        allButton.getStyleClass().add(SELECTED);
+    }
+
+
+
+
+
+
+
+
+
 }
 ```
-###### /java/seedu/todolist/ui/TaskDetailsPanel.java
+###### \java\seedu\todolist\ui\TaskDetailsPanel.java
 ``` java
 
     /**
@@ -299,31 +362,119 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/ui/TaskDetailsPanel.java
+###### \java\seedu\todolist\ui\TaskDetailsPanel.java
 ``` java
     public void loadPersonPage(Task task) {
-        tags.setHgap(10);
-        nameLabel.setText("Name of task: " + task.getName().toString());
-        startLabel.setText("From: " + (task.getStartTime() != null ? task.getStartTime().toString() : ""));
-        endLabel.setText("To: " + (task.getEndTime() != null ? task.getEndTime().toString() : ""));
-        description.setText("Description: " + (task.getDescription() != null ? task.getDescription() : ""));
-        tagsheader.setText("Tags:");
+        nameLabel.setText(task.getName().toString());
+        ImageView image = new ImageView(completeIcon);
+        image.setFitWidth(20);
+        image.setPreserveRatio(true);
+        if (task.isComplete()) {
+            status.getChildren().add(image);
+        }
+        startLabel.setText("From:");
+        endLabel.setText("To:");
+        startText.setText((task.getStartTime() != null ? task.getStartTime().toString() : "-"));
+        endText.setText((task.getEndTime() != null ? task.getEndTime().toString() : "-"));
+        descriptionLabel.setText("Description:");
+        descriptionText.setText( (task.getDescription() != null ? task.getDescription() : ""));
+        tagsHeader.setText("Tags:");
         task.getTags().forEach(tag -> tags.getChildren().add(new Label(tag.tagName)));
     }
 
 ```
-###### /java/seedu/todolist/ui/TaskDetailsPanel.java
+###### \java\seedu\todolist\ui\TaskDetailsPanel.java
 ``` java
     public void freeResources() {
         tags.getChildren().clear();
+        nameLabel.setText("");
+        startLabel.setText("");
+        endLabel.setText("");
+        status.getChildren().clear();
+        startText.setText("");
+        endText.setText("");
+        tagsHeader.setText("");
+        descriptionLabel.setText("");
+        descriptionText.setText("");
+
     }
 
 }
 ```
-###### /java/seedu/todolist/ui/UiManager.java
+###### \java\seedu\todolist\ui\TaskListCard.java
+``` java
+    public TaskListCard(Task task, int displayedIndex) {
+        super(FXML);
+        name.setText(task.getName().fullName);
+        id.setText(displayedIndex + ". ");
+        setTaskTimes(task);
+        if (task.isComplete()) {
+            statusIcon.setImage(ICON_COMPLETE);
+        }
+        setTaskIcon(task);
+        initTags(task);
+    }
+
+    private void initTags(Task task) {
+        task.getTags().forEach(tag -> tags.getChildren().add(new Label(tag.tagName)));
+    }
+
+```
+###### \java\seedu\todolist\ui\TaskListCard.java
+``` java
+    /**
+     * Sets the text for the timing labels
+     * @param task
+     */
+    private void setTaskTimes(Task task) {
+        switch(task.getType()) {
+        case Task.TYPE_END:
+            endTime.setText("End: " + task.getEndTime().toString());
+            break;
+        case Task.TYPE_START_END:
+            startTime.setText("Start: " + task.getStartTime().toString());
+            endTime.setText("End: " + task.getEndTime().toString());
+            break;
+        case Task.TYPE_START:
+            startTime.setText("Start: " + task.getStartTime().toString());
+            break;
+        default:
+            break;
+        }
+    }
+
+
+```
+###### \java\seedu\todolist\ui\TaskListCard.java
+``` java
+    /**
+     * Sets the task icon based on the type of task
+     */
+    private void setTaskIcon(Task task) {
+        switch(task.getType()) {
+        case Task.TYPE_END:
+            taskIcon.setImage(ICON_END_TYPE);
+            break;
+        case Task.TYPE_START_END:
+            taskIcon.setImage(ICON_START_END_TYPE);
+            break;
+        case Task.TYPE_START:
+            taskIcon.setImage(ICON_START_TYPE);
+            break;
+        case Task.TYPE_FLOATING:
+            taskIcon.setImage(ICON_FLOATING_TYPE);
+            break;
+        }
+    }
+
+
+
+}
+```
+###### \java\seedu\todolist\ui\UiManager.java
 ``` java
     @Subscribe
-    private void handleViewListChangedEvent(ViewListChangedEvent event) {
+    public void handleViewListChangedEvent(ViewListChangedEvent event) {
         logger.info(LogsCenter.getEventHandlingLogMessage(event));
         int firstSpaceIndex = event.toString().indexOf(" ");
         String typeOfList = event.toString().substring(0, firstSpaceIndex);
@@ -331,13 +482,381 @@ public class ViewListChangedEvent extends BaseEvent {
     }
 
 ```
-###### /java/seedu/todolist/ui/UiManager.java
+###### \java\seedu\todolist\ui\UiManager.java
 ``` java
     @Subscribe
-    private void handleToDoListEventChanged(ToDoListChangedEvent event) {
-        if (event.typeOfCommand.equals("update") || event.typeOfCommand.equals("add")) {
+    public void handleToDoListEventChanged(ToDoListChangedEvent event) {
+        if (event.typeOfCommand.equals(ADD)) {
             mainWindow.getTaskListPanel().scrollTo(event.index);
+        } else if (event.typeOfCommand.equals(DELETE) || event.typeOfCommand.equals(COMPLETE)) {
+            mainWindow.releaseResources();
         }
     }
+
+```
+###### \resources\view\BlueTheme.css
+``` css
+ */
+.background {
+    -fx-background-color: #112236;
+}
+
+.label {
+    -fx-font-size: 11pt;
+    -fx-font-family: "Gill Sans";
+    -fx-text-fill: #555555;
+    -fx-opacity: 1.0;
+}
+
+.label-bright {
+    -fx-font-size: 11pt;
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-text-fill: white;
+    -fx-opacity: 1;
+}
+
+.label-header {
+    -fx-font-size: 32pt;
+    -fx-font-family: "Gill Sans";
+    -fx-text-fill: white;
+    -fx-opacity: 1;
+}
+
+.text-field {
+    -fx-font-size: 13pt;
+    -fx-font-family: "Gill Sans";
+}
+
+.tab-pane {
+    -fx-padding: 0 0 0 1;
+}
+
+.tab-pane .tab-header-area {
+    -fx-padding: 0 0 0 0;
+    -fx-min-height: 0;
+    -fx-max-height: 0;
+}
+
+#tasklist {
+	-fx-background-color: #112236;
+}
+
+#taskListPanelPlaceholder {
+	-fx-background-color: #112236;
+}
+
+.table-view {
+    -fx-base: #a3bad2;
+    -fx-control-inner-background: #a3bad2;
+    -fx-background-color: #a3bad2;
+    -fx-table-cell-border-color: transparent;
+    -fx-table-header-border-color: transparent;
+    -fx-padding: 5;
+}
+
+.table-view .column-header-background {
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header, .table-view .filler {
+    -fx-size: 35;
+    -fx-border-width: 0 0 1 0;
+    -fx-background-color: #112236;
+    -fx-border-color:
+        transparent
+        transparent
+        derive(-fx-base, 80%)
+        transparent;
+    -fx-border-insets: 0 10 1 0;
+}
+
+.table-view .column-header .label {
+    -fx-font-size: 20pt;
+    -fx-font-family: "Segoe UI Light";
+    -fx-text-fill: white;
+    -fx-alignment: center-left;
+    -fx-opacity: 1;
+}
+
+.table-view:focused .table-row-cell:filled:focused:selected {
+    -fx-background-color: #112236;
+}
+
+.split-pane:horizontal .split-pane-divider {
+    -fx-border-color: transparent #a3bad2 transparent #a3bad2;
+    -fx-background-color: transparent, derive(#a3bad2, 10%);
+}
+
+.split-pane {
+    -fx-border-radius: 1;
+    -fx-border-width: 1;
+    -fx-background-color: derive(#a3bad2, 20%);
+}
+
+.list-cell {
+    -fx-label-padding: 0 0 0 0;
+    -fx-graphic-text-gap : 0;
+    -fx-padding: 0 0 0 0;
+}
+
+.list-cell .label {
+    -fx-text-fill: white;
+}
+
+.list-view {
+	-fx-background-color: #112236;
+}
+
+.cell_big_label {
+    -fx-font-size: 18px;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
+
+.cell_bigger_label {
+	-fx-font-size: 20px;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
+
+.cell_small_label {
+    -fx-font-size: 14px;
+    -fx-text-fill: white;
+}
+
+.anchor-pane {
+     -fx-background-color: #112236;
+}
+
+.anchor-pane-with-border {
+     -fx-background-color: derive(#a3bad2, 20%);
+     -fx-border-color: derive(#a3bad2, 10%);
+     -fx-border-width: 3px;
+     -fx-border-top-width: 1px;
+}
+
+#taskselectiondisplay {
+	-fx-background-color: #112236;
+}
+
+#textForTaskDetails {
+	-fx-font-weight: bold;
+	-fx-font-style: italic;
+    -fx-font-size: 22px;
+    -fx-text-fill: #eeeeee;
+}
+
+.status-bar {
+    -fx-background-color: derive(#a3bad2, 20%);
+    -fx-text-fill: black;
+}
+
+.result-display .content {
+    -fx-background-color: #112236;
+}
+
+.result-display {
+    -fx-text-fill: white;
+    -fx-font-family: "Gill Sans";
+    -fx-font-size: 16px;
+}
+
+.result-display .label {
+    -fx-text-fill: white !important;
+}
+
+.status-bar .label {
+    -fx-text-fill: #436280;
+}
+
+.status-bar-with-border {
+    -fx-background-color: derive(#a3bad2, 30%);
+    -fx-border-color: derive(#a3bad2, 25%);
+    -fx-border-width: 0.5px;
+}
+
+.status-bar-with-border .label {
+    -fx-text-fill:  #436280;
+}
+
+.command-box {
+	  -fx-background-color: #112236;
+	  -fx-text-fill: white;
+}
+
+.grid-pane {
+    -fx-background-color: derive(#a3bad2, 30%);
+    -fx-border-color: derive(#a3bad2, 30%);
+    -fx-border-width: 1px;
+}
+
+.grid-pane .anchor-pane {
+    -fx-background-color: derive(#a3bad2, 30%);
+}
+
+.context-menu {
+    -fx-background-color: derive(#a3bad2, 50%);
+}
+
+.context-menu .label {
+    -fx-text-fill: white;
+}
+
+.menu-bar {
+    -fx-background-color: derive(#a3bad2, 20%);
+}
+
+.menu-bar .label {
+    -fx-font-size: 10pt;
+    -fx-font-family: "Segoe UI Light";
+    -fx-text-fill: white;
+    -fx-opacity: 1.0;
+}
+
+.menu .left-container {
+    -fx-background-color: black;
+}
+
+/*
+ * Metro style Push Button
+ * Author: Pedro Duque Vieira
+ * http://pixelduke.wordpress.com/2012/10/23/jmetro-windows-8-controls-on-java/
+ */
+.button {
+    -fx-padding: 5 22 5 22;
+    -fx-background-radius: 7 7 0 0;
+    -fx-background-color: #436280;
+    -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+    -fx-font-size: 11pt;
+    -fx-text-fill: #a3bad2;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
+}
+
+.button:hover {
+    -fx-background-color: #112236;
+    -fx-padding: 5 22 5 22;
+    -fx-text-fill: #a3bad2;
+    -fx-border-radius: 7 7 0 0;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
+}
+
+.button:pressed, .button:default:hover:pressed {
+    -fx-background-color: #112236;
+    -fx-text-fill: #a3bad2;
+    -fx-font-size: 11pt;
+    -fx-border-radius: 7 7 0 0;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
+}
+
+.button:focused {
+	-fx-padding: 5 22 5 22;
+	-fx-background-color: #112236;
+	-fx-text-fill: #a3bad2;
+    -fx-background-radius: 7 7 0 0;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
+}
+
+.button:disabled, .button:default:disabled {
+    -fx-opacity: 0.4;
+    -fx-background-color: #a3bad2;
+    -fx-text-fill: white;
+}
+
+.button:default {
+    -fx-background-color: -fx-focus-color;
+    -fx-text-fill: #ffffff;
+    -fx-background-radius: 7 7 0 0;
+}
+
+.dialog-pane {
+    -fx-background-color: #a3bad2;
+}
+
+.dialog-pane > *.button-bar > *.container {
+    -fx-background-color: #a3bad2;
+}
+
+.dialog-pane > *.label.content {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
+}
+
+.dialog-pane:header *.header-panel {
+    -fx-background-color: derive(#a3bad2, 25%);
+}
+
+.dialog-pane:header *.header-panel *.label {
+    -fx-font-size: 18px;
+    -fx-font-style: italic;
+    -fx-fill: white;
+    -fx-text-fill: white;
+}
+
+.scroll-bar .thumb {
+    -fx-background-color: #112236;
+    -fx-background-insets: 3;
+}
+
+.scroll-bar .track {
+    -fx-background-color: #a3bad2;
+    -fx-background-insets: 3;
+}
+
+.scroll-bar .increment-button, .scroll-bar .decrement-button {
+    -fx-background-color: #112236;
+    -fx-padding: 0 0 0 0;
+}
+
+.scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
+    -fx-shape: " ";
+}
+
+.scroll-bar:vertical .increment-arrow, .scroll-bar:vertical .decrement-arrow {
+    -fx-padding: 1 8 1 8;
+}
+
+.scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
+    -fx-padding: 8 1 8 1;
+}
+
+#cardPane {
+    -fx-background-color: transparent;
+    -fx-border-color: #d6d6d6;
+    -fx-border-width: 1 1 1 1;
+}
+
+.list-cell {
+	-fx-background-color: #112236;
+	-fx-font-color: white;
+}
+
+
+#filterField, #taskListPanel, #personWebpage {
+    -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
+    -fx-background-color: #112236;
+}
+
+#tags {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#tags .label {
+    -fx-text-fill: #112236;
+    -fx-background-color:  #a3bad2;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11pt;
+}
+
+.selected {
+    -fx-background-color: #112236;
+    -fx-text-fill: #a3bad2;
+    -fx-font-size: 11pt;
+    -fx-border-radius: 7 7 0 0;
+    -fx-background-insets: 0 0 0 0, 0, 1, 2;
+}
 
 ```
